<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Easy reports</string>

    <string name="driver_report">Business trip report</string>
    <string name="history_report">History Reports</string>

    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="patronymic">Patronymic</string>
    <string name="add_makes_registration_vehicles_trailers">Makes and license plates
        of vehicles (trailers):</string>
    <string name="vehicle">Vehicle</string>
    <string name="trailer">Trailer</string>
    <string name="make_vehicle_trailer">Make of the vehicle / trailer</string>
    <string name="make_vehicle">Make of the vehicle</string>
    <string name="make_trailer">Make of the trailer</string>
    <string name="registration_number_vehicle">Registration number of the vehicle</string>
    <string name="registration_number_trailer">Registration number of the trailer</string>
    <string name="rn_vehicle_trailer">R/n of the vehicle / trailer</string>
    <string name="rn_vehicle">R/n of the vehicle</string>
    <string name="rn_trailer">R/n of the trailer</string>
    <string name="add">Add</string>
    <string name="type">Type</string>
    <string name="make">Make</string>
    <string name="rn">R/n</string>
    <string name="save_entered_data">Save the entered data?</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="save_file">Save file</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="info">Info</string>
    <string name="clear">Clear</string>
    <string name="driver">Driver:</string>



    <string name="create_report">Create report</string>
    <string name="be_continued">To be continued</string>
    <string name="report_history">Report history</string>
    <string name="settings">Settings</string>



    <string name="next">Next</string>
    <string name="date">Date</string>
    <string name="data_filling">Data filling</string>
    <string name="route">Route</string>
    <string name="date_departure">Date of departure</string>
    <string name="date_return">Date of return</string>
    <string name="date_border_crossing_departure">Date of border crossing on departure</string>
    <string name="date_border_crossing_return">Date of border crossing on return</string>
    <string name="speedometer_reading_departure">Speedometer reading on departure</string>
    <string name="speedometer_reading_return">Speedometer reading on return</string>
    <string name="fuelled">Fuelled, litres</string>
    <string name="progress_report">Progress report</string>
    <string name="country">Country</string>
    <string name="township">Township</string>
    <string name="township_one">Township one</string>
    <string name="township_two">Township two</string>
    <string name="townships">Townships</string>
    <string name="distance">Distance, km</string>
    <string name="cargo_weight">Weight, t</string>
    <string name="preview">Preview</string>
    <string name="reports_name">Reports name</string>
    <string name="result">Result</string>
    <string name="share">Share</string>
    <string name="create_new_report">Create a new report</string>
    <string name="come_out">Come out</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="data">Data</string>
    <string name="stages_movement">Stages of the movement</string>
    <string name="business_trip_expenses">Business trip expenses</string>
    <string name="current_date">Current date</string>
    <string name="document_number">Document number</string>
    <string name="expense_item">Expense item</string>
    <string name="sum">Sum</string>
    <string name="currency">Currency</string>
    <string name="waybill">Waybill</string>
    <string name="date_create_report">Date the report was created</string>

    <string name="empty_create_first_report">Empty? Create your first report</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>

...
