...
    const val TAG_TEST_EXPENSES_EXPENSE_ITEM: String = "tagTestExpensesExpenseItem"
    const val TAG_TEST_EXPENSES_SUM: String = "tagTestExpensesSum"
    const val TAG_TEST_EXPENSES_CURRENCY: String = "tagTestExpensesCurrency"

    const val TAG_TEST_PREVIEW_REPORT_NAME: String = "tagTestPreviewReportName"

    const val TAG_TEST_SETTING_DATA_VEHICLE_MAKE: String = "tagTestSettingDataVehicleMake"
    const val TAG_TEST_SETTING_DATA_VEHICLE_RN: String = "tagTestSettingDataVehicleRn"
    const val TAG_TEST_SETTING_DATA_RADIO_BUTTON_VEHICLE: String =
        "tagTestSettingDataRadioButtonVehicle"
    const val TAG_TEST_SETTING_DATA_RADIO_BUTTON_TRAILER: String =
        "tagTestSettingDataRadioButtonTrailer"

    const val TAG_TEST_SETTING_PERSONAL_DATA_LAST_NAME: String =
        "tagTestSettingPersonalDataLastName"
    const val TAG_TEST_SETTING_PERSONAL_DATA_FIRST_NAME: String =
        "tagTestSettingPersonalDataFirstName"
...
